Add portfolio endpoint
